--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "Mentir🐻 - Juego de Engaño",
   "short_name": "Mentir🐻",
   "description": "Juego de engaño y deducción - Descubre al mentiroso",
-  "start_url": "/",
+  "start_url": "/MENTIR_/",
+  "scope": "/MENTIR_/",
   "display": "standalone",
   "background_color": "#c8b3e6",
   "theme_color": "#667eea",
